--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ header .subtitle { animation-delay: 1.2s; }
 
 
     .subtitle {
-      font-family: 'Cinzel', serif; /* tipografía elegante como la imagen */
+     font-family: 'Playfair Display', serif;
       font-size: 22px;
       color: #5a4b2b;
       line-height: 1.6;
@@ -657,7 +657,7 @@ label {
 #trasladoModal .modal-content p,
 #recuerdosModal .modal-content p,
 #ubicacionModal .modal-content p {
-  font-family: 'Cinzel', serif; /* tipografía elegante como la imagen */
+  font-family: 'Playfair Display', serif;
   font-size: 22px;
   color: #000;
   text-align: center;
@@ -1067,6 +1067,7 @@ document.addEventListener("DOMContentLoaded", () => {
   }
 });
 </script>
+
 
 
 
