--- a/index.html
+++ b/index.html
@@ -56,18 +56,12 @@
     }
 
 header {
-  border-radius: 30px;
-  border: 10px solid transparent;
-  border-image: repeating-linear-gradient(
-    60deg,
-    #6b4a2b 0 6px,
-    transparent 6px 12px
-  ) 15;
-  box-shadow:
-    0 0 14px rgba(107,74,43,0.3),
-    inset 0 0 8px rgba(107,74,43,0.2);
-  padding: 35px;
+  border: 3px solid #6b4a2b;
+  border-radius: 20px;
+  padding: 30px;
+  clip-path: path("M10,10 Q50,0 100,10 T190,10 V190 Q150,200 100,190 T10,190 Z");
 }
+
 
 
 
@@ -1088,6 +1082,7 @@ document.addEventListener("DOMContentLoaded", () => {
   }
 });
 </script>
+
 
 
 
