--- a/index.html
+++ b/index.html
@@ -832,71 +832,76 @@ label {
 </div>
 
 
-  <!-- MODAL TRASLADO -->
-  <div id="trasladoModal" class="modal">
-    <div class="modal-content">
-      <button class="close-btn" id="closeTraslado"><img src="mi_foto_boda_v36.png" alt="Cerrar"></button>
-      <div style="text-align:center;">
-        <img src="mi_foto_boda_v29.png" alt="Traslado" style="width:60px;margin-bottom:10px;">
-        <h3 style="font-family:'Playfair Display',serif;font-size:26px;font-weight:700;color:#a00034;">Traslado de invitados</h3>
-        <p style="font-size:16px;line-height:1.6;color:#333;">
-          Cuando se acerque nuestro gran día, aquí encontraréis todos los detalles sobre el servicio de autobuses.
-          Compartiremos los horarios y puntos de recogida en Pamplona para acompañarnos hasta el banquete en el Palacio de Olloqui,
-          así como el regreso tras la fiesta para volver cómodamente a Pamplona.
-          ¡Queremos que disfrutéis al máximo, sin preocuparos de nada más que de celebrar con nosotros!
-        </p>
-      </div>
+ <!-- MODAL TRASLADO -->
+<div id="trasladoModal" class="modal">
+  <div class="modal-content">
+    <button class="close-btn" id="closeTraslado"><img src="mi_foto_boda_v36.png" alt="Cerrar"></button>
+    <div style="text-align:center;">
+      <img src="mi_foto_boda_v29.png" alt="Traslado" style="width:60px;margin-bottom:10px;">
+      <h3 class="modal-title">Traslado de invitados</h3>
+      <p>
+        Cuando se acerque nuestro gran día, aquí encontraréis todos los detalles sobre el servicio de autobuses.
+        Compartiremos los horarios y puntos de recogida en Pamplona para acompañarnos hasta el banquete en el Palacio de Olloqui,
+        así como el regreso tras la fiesta para volver cómodamente a Pamplona.
+        ¡Queremos que disfrutéis al máximo, sin preocuparos de nada más que de celebrar con nosotros!
+      </p>
     </div>
   </div>
+</div>
 
-  <!-- MODAL UBICACIÓN -->
-  <div id="ubicacionModal" class="modal">
-    <div class="modal-content">
-      <button class="close-btn" id="closeUbicacion"><img src="mi_foto_boda_v36.png" alt="Cerrar"></button>
-      <div style="text-align:center;">
-        <img src="mi_foto_boda_v28.png" alt="Ceremonia" style="width:60px;margin-bottom:10px;">
-        <h3 style="font-family:'Playfair Display',serif;font-size:22px;font-weight:700;color:#000;">Ceremonia religiosa</h3>
-        <p>La ceremonia religiosa tendrá lugar en la Catedral de Santa María la Real de Pamplona, 
-  un lugar único y lleno de historia que hemos elegido para dar el "sí quiero".<br>
-  Os esperamos el 17 de octubre de 2026 a las 12:00 del mediodía, 
-  para compartir junto a nosotros este momento tan especial.</p>
-        <p>📍 <a href="https://www.google.com/maps/search/?api=1&query=42.819637,-1.641684" target="_blank">Ver ubicación en Google Maps</a></p>
-        <br>
-        <img src="mi_foto_boda_v34.png" alt="Banquete" style="width:60px;margin-bottom:10px;">
-        <h3 style="font-family:'Playfair Display',serif;font-size:22px;font-weight:700;color:#000;">Banquete</h3>
-         <p>Continuaremos compartiendo este día tan especial en el Palacio Cabo de Armería de Olloqui,
-  un entorno con encanto donde disfrutaremos juntos de la comida, la celebración y, por supuesto, 
-  la fiesta hasta el final.</p>
-        <p>📍 <a href="https://www.google.com/maps/search/?api=1&query=42.840699,-1.581877" target="_blank">Ver ubicación en Google Maps</a></p>
-      </div>
+<!-- MODAL UBICACIÓN -->
+<div id="ubicacionModal" class="modal">
+  <div class="modal-content">
+    <button class="close-btn" id="closeUbicacion"><img src="mi_foto_boda_v36.png" alt="Cerrar"></button>
+    <div style="text-align:center;">
+      <img src="mi_foto_boda_v28.png" alt="Ceremonia" style="width:60px;margin-bottom:10px;">
+      <h3 class="modal-title">Ceremonia religiosa</h3>
+      <p>
+        La ceremonia religiosa tendrá lugar en la Catedral de Santa María la Real de Pamplona,
+        un lugar único y lleno de historia que hemos elegido para dar el "sí quiero".<br>
+        Os esperamos el 17 de octubre de 2026 a las 12:00 del mediodía,
+        para compartir junto a nosotros este momento tan especial.
+      </p>
+      <p>📍 <a href="https://www.google.com/maps/search/?api=1&query=42.819637,-1.641684" target="_blank">Ver ubicación en Google Maps</a></p>
+      <br>
+      <img src="mi_foto_boda_v34.png" alt="Banquete" style="width:60px;margin-bottom:10px;">
+      <h3 class="modal-title">Banquete</h3>
+      <p>
+        Continuaremos compartiendo este día tan especial en el Palacio Cabo de Armería de Olloqui,
+        un entorno con encanto donde disfrutaremos juntos de la comida, la celebración y, por supuesto,
+        la fiesta hasta el final.
+      </p>
+      <p>📍 <a href="https://www.google.com/maps/search/?api=1&query=42.840699,-1.581877" target="_blank">Ver ubicación en Google Maps</a></p>
     </div>
   </div>
+</div>
 
-  <!-- MODAL RECUERDOS -->
-  <div id="recuerdosModal" class="modal">
-    <div class="modal-content">
-      <button class="close-btn" id="closeRecuerdos"><img src="mi_foto_boda_v36.png" alt="Cerrar"></button>
-      <div style="text-align:center;">
-        <img src="mi_foto_boda_v38.png" alt="Cámara" style="width:60px;margin-bottom:8px;">
-        <h3 style="font-family:'Playfair Display',serif;font-size:26px;font-weight:700;color:#a00034;">Rincón de los recuerdos</h3>
-       <p>El día de nuestra boda estará inmortalizado por un fotógrafo profesional 📷, 
-  así que no os preocupéis, ¡tendremos fotos oficiales de cada momento!  
-  Pero también queremos ver la celebración a través de vuestros ojos 👀.  
-  Por eso, os invitamos a subir aquí todas las fotos espontáneas que hagáis con vuestro móvil:  
-  esos instantes divertidos, naturales y únicos que solo vosotros podéis captar.  </p>
-        </p>
-     <form id="recuerdosForm">
-  <label for="foto" class="file-label">📸 Seleccionar fotos</label>
-  <input type="file" id="foto" name="foto" accept="image/*" multiple>
-  <div id="recuerdosMsg"></div>
+<!-- MODAL RECUERDOS -->
+<div id="recuerdosModal" class="modal">
+  <div class="modal-content">
+    <button class="close-btn" id="closeRecuerdos"><img src="mi_foto_boda_v36.png" alt="Cerrar"></button>
+    <div style="text-align:center;">
+      <img src="mi_foto_boda_v38.png" alt="Cámara" style="width:60px;margin-bottom:8px;">
+      <h3 class="modal-title">Rincón de los recuerdos</h3>
+      <p>
+        El día de nuestra boda estará inmortalizado por un fotógrafo profesional 📷,
+        así que no os preocupéis, ¡tendremos fotos oficiales de cada momento!  
+        Pero también queremos ver la celebración a través de vuestros ojos 👀.  
+        Por eso, os invitamos a subir aquí todas las fotos espontáneas que hagáis con vuestro móvil:
+        esos instantes divertidos, naturales y únicos que solo vosotros podéis captar.  
+      </p>
 
-  <button type="submit">Enviar fotos</button>
-</form>
-        <div id="recuerdosMsg" style="margin-top:10px;font-size:14px;"></div>
-      </div>
+      <form id="recuerdosForm">
+        <label for="foto" class="file-label">📸 Seleccionar fotos</label>
+        <input type="file" id="foto" name="foto" accept="image/*" multiple>
+        <div id="recuerdosMsg"></div>
+        <button type="submit">Enviar fotos</button>
+      </form>
+      <div id="recuerdosMsg" style="margin-top:10px;font-size:14px;"></div>
     </div>
   </div>
-  
+</div>
+
 <script>
 document.addEventListener("DOMContentLoaded", () => {
   const pageWrapper = document.getElementById("page-wrapper");
@@ -1082,6 +1087,7 @@ document.addEventListener("DOMContentLoaded", () => {
   }
 });
 </script>
+
 
 
 
