--- a/index.html
+++ b/index.html
@@ -931,7 +931,7 @@ label {
 
       <br>
       <img src="mi_foto_boda_v34.png" alt="Banquete" style="width:60px;margin-bottom:10px;">
-      <h4 class="modal-subtitle">Banquete</h4>
+      <h3 class="modal-title">Banquete</h3>
       <p>
         Continuaremos compartiendo este día tan especial en el Palacio Cabo de Armería de Olloqui,
         un entorno con encanto donde disfrutaremos juntos de la comida, la celebración y, por supuesto,
@@ -1160,6 +1160,7 @@ document.addEventListener("DOMContentLoaded", () => {
   }
 });
 </script>
+
 
 
 
