--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     * { box-sizing: border-box; margin: 0; padding: 0; }
 
     body {
-      background: radial-gradient(circle at top center, #f9f4e8 0%, #f8f1e3 40%, #f6ebd8 100%);
+     background: radial-gradient(circle at top center, #f3e6d1 0%, #e9d5b8 40%, #d8bfa3 100%);
       font-family: 'Lora', serif;
       color: var(--ink);
       overflow-x: hidden;
@@ -1160,6 +1160,7 @@ document.addEventListener("DOMContentLoaded", () => {
   }
 });
 </script>
+
 
 
 
