--- a/index.html
+++ b/index.html
@@ -172,41 +172,59 @@ header .subtitle { animation-delay: 1.2s; }
 }
 
 
+/* === CONTADOR ELEGANTE === */
 #countdown {
   display: flex;
   justify-content: center;
-  align-items: center; /* centrado vertical */
-  gap: 15px;           /* separación uniforme */
-  flex-wrap: nowrap;   /* evita que los segundos se bajen */
+  align-items: baseline;
+  gap: 40px; /* más espacio entre columnas */
+  flex-wrap: nowrap;
+  margin-top: 10px;
 }
 
 .time-box {
-  background: rgba(255, 245, 230, 0.9);
-  border: 2px solid #c9ab83;
-  border-radius: 12px;
-  padding: 15px 20px;
   text-align: center;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-
-  display: flex;               /* usa flexbox */
-  flex-direction: column;      /* coloca número y texto en columna */
-  justify-content: center;     /* centra verticalmente */
-  align-items: center;         /* centra horizontalmente */
-  min-width: 70px;             /* ancho mínimo */
-  flex: 0 0 auto;              /* evita que se comprima */
+  font-family: 'Cinzel', serif;
+  color: #6b4a2b; /* mismo color que el título */
 }
 
 .time-box span {
   display: block;
-  font-size: 28px;
-  font-weight: bold;
-  color: var(--brand);
+  font-size: 48px;
+  font-weight: 700;
+  letter-spacing: 2px;
+  line-height: 1.1;
+  transition: opacity 0.4s ease, transform 0.4s ease;
+}
+
+.time-box span.change {
+  opacity: 0.6;
+  transform: scale(1.1);
 }
 
 .time-box small {
+  display: block;
   font-size: 14px;
-  color: var(--ink);
-  font-family: 'Playfair Display', serif;
+  letter-spacing: 2px;
+  margin-top: 4px;
+  font-weight: 600;
+  color: #6b4a2b;
+  text-transform: uppercase;
+}
+
+/* Puntos separadores */
+#countdown::before,
+#countdown::after {
+  content: "";
+}
+
+.time-box:not(:last-child)::after {
+  content: "·";
+  font-size: 36px;
+  color: #6b4a2b;
+  margin-left: 20px;
+  position: relative;
+  top: -5px;
 }
 
 
@@ -1014,29 +1032,41 @@ document.addEventListener("DOMContentLoaded", () => {
 
   window.addEventListener("popstate", closeAllModals);
 
-  /* === CUENTA ATRÁS === */
-  const weddingDate = new Date("Oct 17, 2026 12:00:00").getTime();
-  const daysEl = document.getElementById("days");
-  const hoursEl = document.getElementById("hours");
-  const minutesEl = document.getElementById("minutes");
-  const secondsEl = document.getElementById("seconds");
+ /* === CUENTA ATRÁS === */
+const weddingDate = new Date("Oct 17, 2026 12:00:00").getTime();
+const daysEl = document.getElementById("days");
+const hoursEl = document.getElementById("hours");
+const minutesEl = document.getElementById("minutes");
+const secondsEl = document.getElementById("seconds");
 
-  setInterval(() => {
-    const now = new Date().getTime();
-    const distance = weddingDate - now;
-    if (distance <= 0) {
-      document.getElementById("countdown").innerHTML = "💍 ¡Hoy es el gran día!";
-      return;
-    }
-    const days = Math.floor(distance / (1000 * 60 * 60 * 24));
-    const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-    const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-    const seconds = Math.floor((distance % (1000 * 60)) / 1000);
-    if (daysEl) daysEl.textContent = days;
-    if (hoursEl) hoursEl.textContent = hours;
-    if (minutesEl) minutesEl.textContent = minutes;
-    if (secondsEl) secondsEl.textContent = seconds;
-  }, 1000);
+setInterval(() => {
+  const now = new Date().getTime();
+  const distance = weddingDate - now;
+
+  if (distance <= 0) {
+    document.getElementById("countdown").innerHTML = "💍 ¡Hoy es el gran día!";
+    return;
+  }
+
+  const days = Math.floor(distance / (1000 * 60 * 60 * 24));
+  const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+  const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+  const seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+  // === Actualiza valores en pantalla ===
+  if (daysEl) daysEl.textContent = days;
+  if (hoursEl) hoursEl.textContent = hours;
+  if (minutesEl) minutesEl.textContent = minutes;
+  if (secondsEl) secondsEl.textContent = seconds;
+
+  // === Añade la clase de animación para efecto "fade" ===
+  [daysEl, hoursEl, minutesEl, secondsEl].forEach(el => {
+    if (!el) return;
+    el.classList.add("change");
+    setTimeout(() => el.classList.remove("change"), 400);
+  });
+
+}, 1000);
 
   /* === FORMULARIO ASISTENCIA === */
   const form = document.getElementById("rsvpForm");
@@ -1160,6 +1190,7 @@ document.addEventListener("DOMContentLoaded", () => {
   }
 });
 </script>
+
 
 
 
