--- a/index.html
+++ b/index.html
@@ -174,31 +174,58 @@ header .subtitle { animation-delay: 1.2s; }
 
 /* === CONTADOR ELEGANTE === */
 /* === Puntos separadores elegantes entre bloques === */
+/* === CONTADOR ELEGANTE — ESTILO ALINEADO CON PUNTOS === */
 #countdown {
   display: flex;
   justify-content: center;
-  align-items: flex-end;
-  gap: 50px; /* espacio entre grupos */
-  flex-wrap: nowrap;
-  margin-top: 10px;
+  align-items: flex-start;
+  gap: 60px; /* separación entre cada grupo */
+  margin-top: 20px;
   position: relative;
 }
 
 .time-box {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
   font-family: 'Cinzel', serif;
   color: #6b4a2b;
-  position: relative; /* para ubicar el punto con precisión */
+  text-align: center;
 }
 
-/* Punto centrado entre cada bloque */
+/* números grandes */
+.time-box span {
+  font-size: 46px;
+  font-weight: 700;
+  line-height: 1.1;
+  transition: opacity 0.4s ease, transform 0.4s ease;
+}
+
+/* animación suave al cambiar */
+.time-box span.change {
+  opacity: 0.6;
+  transform: scale(1.1);
+}
+
+/* etiquetas pequeñas */
+.time-box small {
+  font-size: 14px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  font-weight: 600;
+  margin-top: 6px;
+  color: #6b4a2b;
+}
+
+/* puntos separadores entre bloques */
 .time-box:not(:last-child)::after {
   content: "·";
   position: absolute;
-  right: -30px; /* distancia entre número y punto */
-  top: 50%;
-  transform: translateY(-60%);
-  font-size: 40px;
+  right: -35px;
+  top: 25%;
+  transform: translateY(-50%);
+  font-size: 36px;
   color: #6b4a2b;
   font-weight: 400;
 }
@@ -1155,6 +1182,7 @@ document.addEventListener("DOMContentLoaded", () => {
   }
 });
 </script>
+
 
 
 
