--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ header {
   border-radius: 25px;
   max-width: 500px; /* tamaño más ajustado al título */
   margin: 40px auto 20px;
-  background: rgba(255, 255, 255, 0.25);
+  background: #f8f1e3;
   box-shadow: 0 6px 18px rgba(0, 0, 0, 0.08);
   position: relative;
   overflow: hidden;
@@ -146,7 +146,7 @@ header .subtitle { animation-delay: 1.2s; }
   border-radius: 25px;
   max-width: 900px;
   margin: 40px auto;
-  background: rgba(255, 255, 255, 0.25);
+  background: #f8f1e3;
   box-shadow: 0 6px 18px rgba(0, 0, 0, 0.08);
   animation: fadeUp 2s ease-in-out;
   box-sizing: border-box;
@@ -298,7 +298,7 @@ header .subtitle { animation-delay: 1.2s; }
       display: flex;
       flex-direction: column;
       align-items: center;
-      background: rgba(250,240,240,0.9);
+      background: #f8f1e3;
       padding: 16px;
       border-radius: 16px;
       border: 2px solid #000;
@@ -1197,6 +1197,7 @@ document.addEventListener("DOMContentLoaded", () => {
   }
 });
 </script>
+
 
 
 
