--- a/index.html
+++ b/index.html
@@ -31,13 +31,16 @@
 
     * { box-sizing: border-box; margin: 0; padding: 0; }
 
-    body {
-     background: radial-gradient(circle at top center, #f3e6d1 0%, #e9d5b8 40%, #d8bfa3 100%);
-      font-family: 'Lora', serif;
-      color: var(--ink);
-      overflow-x: hidden;
-      animation: fadeIn 4s ease-in-out;
-    }
+   body {
+  background:
+    radial-gradient(circle at 20% 30%, rgba(255, 255, 255, 0.5) 0%, transparent 60%),
+    radial-gradient(circle at 80% 70%, rgba(255, 255, 255, 0.5) 0%, transparent 60%),
+    radial-gradient(circle at 10% 90%, rgba(255, 255, 255, 0.4) 0%, transparent 70%),
+    radial-gradient(circle at 90% 10%, rgba(255, 255, 255, 0.4) 0%, transparent 70%),
+    linear-gradient(to bottom right, #f3e6d1, #e9d5b8, #d8bfa3);
+  background-attachment: fixed;
+  background-size: cover;
+}
 
     @keyframes fadeIn {
       0% { opacity: 0; transform: translateY(30px); }
@@ -1219,6 +1222,7 @@ document.addEventListener("DOMContentLoaded", () => {
   }
 });
 </script>
+
 
 
 
