--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
     * { box-sizing: border-box; margin: 0; padding: 0; }
 
    body {
-  background:
-    radial-gradient(circle at 20% 30%, rgba(255, 255, 255, 0.5) 0%, transparent 60%),
-    radial-gradient(circle at 80% 70%, rgba(255, 255, 255, 0.5) 0%, transparent 60%),
-    radial-gradient(circle at 10% 90%, rgba(255, 255, 255, 0.4) 0%, transparent 70%),
-    radial-gradient(circle at 90% 10%, rgba(255, 255, 255, 0.4) 0%, transparent 70%),
-    linear-gradient(to bottom right, #f3e6d1, #e9d5b8, #d8bfa3);
-  background-attachment: fixed;
-  background-size: cover;
-}
+ background:
+  radial-gradient(circle at 20% 30%, rgba(255, 255, 255, 0.35) 0%, transparent 60%),
+  radial-gradient(circle at 80% 70%, rgba(255, 255, 255, 0.25) 0%, transparent 60%),
+  radial-gradient(circle at 10% 90%, rgba(255, 255, 255, 0.3) 0%, transparent 70%),
+  radial-gradient(circle at 90% 10%, rgba(255, 255, 255, 0.25) 0%, transparent 70%),
+  linear-gradient(to bottom right, #e8d3b8, #d8b793, #c8a67a);
+background-attachment: fixed;
+background-size: cover;
+
 
     @keyframes fadeIn {
       0% { opacity: 0; transform: translateY(30px); }
@@ -1222,6 +1222,7 @@ document.addEventListener("DOMContentLoaded", () => {
   }
 });
 </script>
+
 
 
 
