--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ header {
   border-radius: 25px;
   max-width: 500px; /* tamaño más ajustado al título */
   margin: 40px auto 20px;
-  background: #f8f1e3;
+  background: #fcf9f5;
   box-shadow: 0 6px 18px rgba(0, 0, 0, 0.08);
   position: relative;
   overflow: hidden;
@@ -319,7 +319,7 @@ header .subtitle { animation-delay: 1.2s; }
       display: flex;
       flex-direction: column;
       align-items: center;
-      background: #f8f1e3;
+      background: #fcf9f5;
       padding: 16px;
       border-radius: 16px;
       border: 2px solid #000;
@@ -1217,6 +1217,7 @@ document.addEventListener("DOMContentLoaded", () => {
   }
 });
 </script>
+
 
 
 
