--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
     * { box-sizing: border-box; margin: 0; padding: 0; }
 
 body {
-      background: radial-gradient(circle at top center, #f9f4e8 0%, #f8f1e3 40%, #f6ebd8 100%);
-      font-family: 'Lora', serif;
-      color: var(--ink);
-      overflow-x: hidden;
-      animation: fadeIn 4s ease-in-out;
-    }
+  background: radial-gradient(circle at top center, #f1e8d7 0%, #f0e1cc 40%, #e8d3b8 100%);
+  font-family: 'Lora', serif;
+  color: var(--ink);
+  overflow-x: hidden;
+  animation: fadeIn 4s ease-in-out;
+}
 
     @keyframes fadeIn {
       0% { opacity: 0; transform: translateY(30px); }
@@ -1217,6 +1217,7 @@ document.addEventListener("DOMContentLoaded", () => {
   }
 });
 </script>
+
 
 
 
