--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@ header .subtitle { animation-delay: 1.2s; }
       display: flex;
       flex-direction: column;
       align-items: center;
-      background: #fcf9f5;
+      background: #fdfcfb;
       padding: 16px;
       border-radius: 16px;
       border: 2px solid #000;
@@ -1217,6 +1217,7 @@ document.addEventListener("DOMContentLoaded", () => {
   }
 });
 </script>
+
 
 
 
