--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ header .subtitle { animation-delay: 1.2s; }
   .subtitle-box {
   text-align: center;
   padding: 25px 30px;
-  border: 2px solid #6b4a2b; /* mismo color que la letra */
+  border: 2px solid #fdfcfb; /* mismo color que la letra */
   border-radius: 25px;
   max-width: 900px;
   margin: 40px auto;
@@ -1217,6 +1217,7 @@ document.addEventListener("DOMContentLoaded", () => {
   }
 });
 </script>
+
 
 
 
