--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ header {
   text-align: center;
   padding: 25px 30px;
   animation: fadeUp 2s ease-in-out, drawBorder 2.5s ease forwards;
-  border: 2px solid #6b4a2b; /* mismo color que el texto */
+  border: 2px solid #fdfcfb; /* mismo color que el texto */
   border-radius: 25px;
   max-width: 500px; /* tamaño más ajustado al título */
   margin: 40px auto 20px;
@@ -1217,6 +1217,7 @@ document.addEventListener("DOMContentLoaded", () => {
   }
 });
 </script>
+
 
 
 
