--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@ header {
   text-align: center;
   padding: 25px 30px;
   animation: fadeUp 2s ease-in-out, drawBorder 2.5s ease forwards;
-  border: 2px solid #fdfcfb; /* mismo color que el texto */
+  border: 2px solid #000; /* mismo color que el texto */
   border-radius: 25px;
   max-width: 500px; /* tamaño más ajustado al título */
   margin: 40px auto 20px;
-  background: #fcf9f5;
+  background: #fdfcfb;
   box-shadow: 0 6px 18px rgba(0, 0, 0, 0.08);
   position: relative;
   overflow: hidden;
@@ -1217,6 +1217,7 @@ document.addEventListener("DOMContentLoaded", () => {
   }
 });
 </script>
+
 
 
 
