--- a/index.html
+++ b/index.html
@@ -163,11 +163,11 @@ header .subtitle { animation-delay: 1.2s; }
   .subtitle-box {
   text-align: center;
   padding: 25px 30px;
-  border: 2px solid #fdfcfb; /* mismo color que la letra */
+  border: 2px solid #000; 
   border-radius: 25px;
   max-width: 900px;
   margin: 40px auto;
-  background: #f8f1e3;
+  background: #fdfcfb;
   box-shadow: 0 6px 18px rgba(0, 0, 0, 0.08);
   animation: fadeUp 2s ease-in-out;
   box-sizing: border-box;
@@ -1216,6 +1216,7 @@ document.addEventListener("DOMContentLoaded", () => {
   }
 });
 </script>
+
 
 
 
